# opensharded

./: Cargo.toml  README.md  config.toml  settings.yml
.github/workflows/: rust-clippy.yml  rust.yml
config/: log4rs.yaml  settings.yml
src/: api.rs  main.rs  models.rs
