[package]
name = "opensharded"
version = "0.1.0"
edition = "2018"


[dependencies]
#scylla = "0.2.1"
maplit = "1.0.2"
sorted-vec = { version = "0.5.2", features = ["serde"]}
thrift = "0.13.0"
config = { version= "0.13.1", features = ["yaml"] }
serde = { version = "1.0.8", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
log = "0.4.17"
log4rs = "1.1.1"
deadpool-postgres = "0.10.2"